# usbd-hid

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release-crates.yml  test.yml
descriptors/: Cargo.toml
descriptors/src/: lib.rs
macros/: Cargo.toml
macros/src/: gen.rs  item.rs  lib.rs  packer.rs  spec.rs  split.rs  utils.rs
src/: descriptor.rs  hid_class.rs  lib.rs
