[package]
name = "usbd-hid"
description = "A HID class for use with usb-device."
version = "0.3.8"
keywords = ["hid", "no-std", "usb-device"]
license = "MIT OR Apache-2.0"
authors = ["twitchyliquid64"]
edition = "2018"
repository = "https://github.com/twitchyliquid64/usbd-hid"


[dependencies]
usbd-hid-macros = { path = "macros", version = "0.2.7" }
usb-device = "0.2.1"
serde = "1.0.100"
