[package]
name = "usbd-hid"
description = "A HID class for use with usb-device."
version = "0.4.2"
keywords = ["hid", "no-std", "usb-device"]
license = "MIT OR Apache-2.0"
authors = ["twitchyliquid64"]
edition = "2018"
repository = "https://github.com/twitchyliquid64/usbd-hid"


[dependencies]
usbd-hid-macros = { path = "macros", version = "0.4.2" }
usb-device = "0.2.1"
serde = { version = "1.0", default-features = false }
ssmarshal = { version = "1.0", default-features = false }
