[workspace]
members = [
    "macros",
    "descriptors",
]

[package]
name = "usbd-hid"
description = "A HID class for use with usb-device."
version = "0.6.1"
keywords = ["hid", "no-std", "usb-device"]
license = "MIT OR Apache-2.0"
authors = ["twitchyliquid64"]
edition = "2021"
repository = "https://github.com/twitchyliquid64/usbd-hid"


[dependencies]
defmt = { version = "0.3", optional = true }
serde = { version = "1.0", default-features = false }
ssmarshal = { version = "1.0", default-features = false }
usb-device = "0.2.9"
usbd-hid-macros = { path = "macros", version = "0.6.0" }


[features]
# Add defmt Format support enums and structs
defmt = ["dep:defmt", "usb-device/defmt"]
